# LaserScanningProjector

./: .gitignore  .gitmodules  README.md
Hardware/: Audio.sch  LaserScanningProjector-cache.lib  LaserScanningProjector.kicad_pcb  LaserScanningProjector.pro  LaserScanningProjector.sch  Motor and Laser.sch
Hardware/CubeMX/: LaserScanningProjector.ioc
Hardware/Gerber Files/: LaserScanningProjector-B_Cu.gbl  LaserScanningProjector-B_Mask.gbs  LaserScanningProjector-B_Paste.gbp  LaserScanningProjector-B_SilkS.gbo  LaserScanningProjector-Edge_Cuts.gm1  LaserScanningProjector-F_Cu.gtl  LaserScanningProjector-F_Mask.gts  LaserScanningProjector-F_Paste.gtp  LaserScanningProjector-F_SilkS.gto  LaserScanningProjector-NPTH.drl  LaserScanningProjector-PTH.drl
Report/: .gitignore  example.html
Software/: CMakeLists.txt  LICENSE.md  README.md
Software-PC/: CMakeLists.txt  README.md
Software-PC/cmake/: compile_flags.cmake
Software-PC/src/: main.cpp
Software/cmake/: compile_flags.cmake  ff14.cmake  libopencm3-genlink.cmake  libopencm3.cmake  lvgl.cmake
Software/middleware/ff14/: CMakeLists.txt
Software/middleware/lvgl/: CMakeLists.txt  lv_conf.h
Software/src/: main.cpp  main.h
Software/src/drivers/: Motor.cpp  Motor.h  headphones.cpp  headphones.h  laser.cpp  laser.h  laser_canvas.cpp  laser_canvas.h  mic.cpp  mic.h  nav5.cpp  nav5.h  sdcard.cpp  sdcard.h  st7735r.cpp  st7735r.h  st7735s.cpp  st7735s.h  stepper_motor.cpp  stepper_motor.h
Software/src/images/: smiley.h
Software/src/lib/: circular_queue.h  gpio.cpp  gpio.h  helper.h  rcc.cpp  rcc.h  systick.cpp  systick.h  ui.cpp  ui.h  ui_container.cpp  ui_container.h  ui_obj.cpp  ui_obj.h  usart.cpp  usart.h  usb_cdcacm.cpp  usb_cdcacm.h  usb_structs.h
Software/src/lib/lvgl/: button.cpp  button.h  container.cpp  container.h  group.cpp  group.h  label.cpp  label.h  list.cpp  list.h  object.cpp  object.h
Software/src/views/: view_audio.cpp  view_audio.h  view_basic.cpp  view_basic.h  view_debug.cpp  view_debug.h  view_init.cpp  view_init.h  view_main.cpp  view_main.h  view_manual.cpp  view_manual.h  view_usb.cpp  view_usb.h
